...
            /// this table.
            public var title: String? {
                switch self {
                case .esc: "Escape"
                case .ctrl: "Control"
                case .alt: "Option"
                case .command: "Command"
                case .tab: "Tab"
                case .arrowLeft: "Left Arrow"
                case .arrowUp: "Up Arrow"
                case .arrowDown: "Down Arrow"
                case .arrowRight: "Right Arrow"
                case let .symbol(symbol): symbol
                case let .presentedSymbol(symbol, _):
                    switch presentation {
...
