...
                            }), let action = command.action else { return }
                            UIApplication.shared.sendAction(action, to: self, from: command, for: nil)
                        })
                    }
                }
                if ProcessInfo.processInfo.arguments.contains("--ui-testing-public-copy") {
                    items.insert(UIAction(title: "Send Key") { [weak self] _ in
                        guard let self else { return }
                        UIPasteboard.general.items = []
                        accessibilityValue = nil
                        if ProcessInfo.processInfo.arguments.contains("--ui-testing-sticky-copy") {
                            toggleStickyModifier(.command)
                            _ = sendKey(.c)
...
